# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-python-test.

E2E test module for Python API functionality.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

flink_java_library(
    name = "flink-python-test",
    srcs = glob(["src/main/java/**/*.java"]),
    testonly = True,
    deps = [
        "//flink-python",
        "//flink-streaming-java",
        "//flink-table/flink-table-api-java-bridge",
    ],
    visibility = ["//visibility:public"],
)

flink_java_tests(
    name = "tests",
    deps = [":flink-python-test"],
)
