# Licensed to the Apache Software Foundation (ASF) under one or more
# contributor license agreements.  See the NOTICE file distributed with
# this work for additional information regarding copyright ownership.
# The ASF licenses this file to You under the Apache License, Version 2.0
# (the "License"); you may not use this file except in compliance with
# the License.  You may obtain a copy of the License at
#
#    http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.


"""
BUILD file for flink-external-resource-gpu module.

This module provides GPU external resource support for Flink.
"""

load("//tools/bazel:java_library_suite.bzl", "flink_java_library", "flink_java_tests")

# Main library target
flink_java_library(
    name = "flink-external-resource-gpu",
    srcs = glob(["src/main/java/**/*.java"]),
    resources = glob(["src/main/resources/**/*"], allow_empty = True),
    resource_strip_prefix = "flink-external-resources/flink-external-resource-gpu/src/main/resources",
    deps = [
        "//flink-annotations",
        "//flink-core",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:org_slf4j_slf4j_api",
    ],
    visibility = ["//visibility:public"],
)

# Test resource scripts filegroup (avoids duplicate label issues)
filegroup(
    name = "test-scripts",
    srcs = glob(["src/test/resources/**/*.sh"]),
)

# Tests
flink_java_tests(
    name = "tests",
    deps = [":flink-external-resource-gpu"],
    # Add test resource scripts via filegroup (avoids duplicate label issues)
    data = [":test-scripts"],
)
